--- a/03_FRONT/CSS/화면구조잡기/07_실습_화면구현.html
+++ b/03_FRONT/CSS/화면구조잡기/07_실습_화면구현.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./           /styles/index.css">
 </head>
 <body>
     <div id="wrapper">
