--- a/03_FRONT/JavaScript/practice/practice5.html
+++ b/03_FRONT/JavaScript/practice/practice5.html
@@ -12,7 +12,7 @@
         height: 100px;
     }
 
-    #area{
+    .area{
         width: 400px;
         height: 200px;
         border: 1px solid black;
@@ -24,21 +24,34 @@
         <fieldset>
             <legend>구매정보</legend>
             <ul>
-                <li>구매자 : <input type="text" placeholder="구매자의 이름을 입력하세요"></li>
-                <li>상품명 : <input type="text" placeholder="구매 상품명을 입력하세요"></li>
-                <li>가격 : <input type="text" placeholder="구매 가격을 입력하세요"></li>
-                <li>구매 수량 : <input type="number" placeholder="최소 10" min="10" max="100"></li>
-                <li>납품 등급 : <input type="range" min="1" max="9" step="2" value="1"></li>
+                <li>구매자 : <input type="text" name="info" nameplaceholder="구매자의 이름을 입력하세요"></li>
+                <li>상품명 : <input type="text" name="info" placeholder="구매 상품명을 입력하세요"></li>
+                <li>가격 : <input type="number" name="info" placeholder="구매 가격을 입력하세요"></li>
+                <li>구매 수량 : <input type="number" name="info" placeholder="최소 10" min="10" max="100"></li>
+                <li>납품 등급 : <input type="range" name="info" min="1" max="9" step="2" value="1"></li>
                 <li><textarea name="descript"></textarea></li>
             </ul>
         </fieldset>
-        <button onclick="">입력 값 출력하기</button>
+        <button onclick="purchase()">입력 값 출력하기</button>
         <br><br>
-        <div id="area"></div>
+        <div class="area" id="purchase-result"></div>
     </form>
 
     <script>
+        function purchase(){
+        const purchaseInfo = document.querySelectorAll('input[name=info]');
+        // console.log(purchaseInfo);
 
+        
+        let str = "";
+        for(let i=0; i<purchaseInfo.length; i++){
+            const box = purchaseInfo[i];
+                  str += (box.value + " "); 
+            }
+        }
+
+        const resultEl = document.getElementById('purchase-result').value;
+        resultEl.innerText = str;
     </script>
 </body>
 </html>
