09/21 연습문제 완료

--- a/03_FRONT/JavaScript/practice/practice5.html
+++ b/03_FRONT/JavaScript/practice/practice5.html
@@ -1,57 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>practice5</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>practice5</title>
+  <style>
+    textarea {
+      resize: none;
+      width: 300px;
+      height: 100px;
+    }
+    .area {
+      width: 400px;
+      height: 200px;
+      border: 1px solid black;
+    }
+  </style>
 </head>
-<style>
-    textarea{
-        resize: none;
-        width: 300px;
-        height: 100px;
-    }
-
-    .area{
-        width: 400px;
-        height: 200px;
-        border: 1px solid black;
-    }
-</style>
 <body>
-    <h2>Practice5</h2>
-    <form action="">
-        <fieldset>
-            <legend>구매정보</legend>
-            <ul>
-                <li>구매자 : <input type="text" name="info" nameplaceholder="구매자의 이름을 입력하세요"></li>
-                <li>상품명 : <input type="text" name="info" placeholder="구매 상품명을 입력하세요"></li>
-                <li>가격 : <input type="number" name="info" placeholder="구매 가격을 입력하세요"></li>
-                <li>구매 수량 : <input type="number" name="info" placeholder="최소 10" min="10" max="100"></li>
-                <li>납품 등급 : <input type="range" name="info" min="1" max="9" step="2" value="1"></li>
-                <li><textarea name="descript"></textarea></li>
-            </ul>
-        </fieldset>
-        <button onclick="purchase()">입력 값 출력하기</button>
-        <br><br>
-        <div class="area" id="purchase-result"></div>
-    </form>
+  <h2>Practice5</h2>
+  <form>
+    <fieldset>
+      <legend>구매정보</legend>
+      <ul>
+        <li>구매자 : <input type="text" name="info" placeholder="구매자의 이름을 입력하세요"></li>
+        <li>상품명 : <input type="text" name="info" placeholder="구매 상품명을 입력하세요"></li>
+        <li>가격 : <input type="number" name="info" placeholder="구매 가격을 입력하세요"></li>
+        <li>구매 수량 : <input type="number" name="info" placeholder="최소 10" min="10" max="100"></li>
+        <li>납품 등급 : <input type="range" name="info" min="1" max="9" step="2" value="1"></li>
+        <li><textarea name="descript" placeholder="기타 사항"></textarea></li>
+      </ul>
+    </fieldset>
+    <button type="button" onclick="purchase()">입력 값 출력하기</button>
+    <br><br>
+    <div class="area" id="purchase-result"></div>
+  </form>
 
-    <script>
-        function purchase(){
-        const purchaseInfo = document.querySelectorAll('input[name=info]');
-        // console.log(purchaseInfo);
+  <script>
+    function purchase() {
+      const purchaseInfo = document.querySelectorAll('input[name=info], textarea[name=descript]');
+      
+      const labels = ["구매자 명", "상품 명", "가격", "구매 수량", "납품 등급", "기타 사항"];
 
-        
-        let str = "";
-        for(let i=0; i<purchaseInfo.length; i++){
-            const box = purchaseInfo[i];
-                  str += (box.value + " "); 
-            }
-        }
+      let str = "";
+      for (let i = 0; i < purchaseInfo.length; i++) {
+        str += labels[i] + " : " + purchaseInfo[i].value + "\n";
+      }
 
-        const resultEl = document.getElementById('purchase-result').value;
-        resultEl.innerText = str;
-    </script>
+      const resultEl = document.getElementById('purchase-result');
+      resultEl.innerText = str;
+    }
+  </script>
 </body>
 </html>
