--- a/03_FRONT/JavaScript/practice/practice6.html
+++ b/03_FRONT/JavaScript/practice/practice6.html
@@ -5,24 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>practice6</title>
     <style>
-        fieldset{
+        fieldset {
             text-align: center;
+            margin-bottom: 20px;
         }
 
-        radio{
-            gap: 50px;
+        .search-box {
+            display: none; 
+            margin: 15px auto;
+            padding: 15px;
+            width: 400px;
+            height: 50px;
+
+            background-color: lightgray;  
+            border: 1px solid black;
         }
 
-       
+        .search-box input[type="text"] {
+            padding: 5px;
+            margin-right: 5px;
+            width: 300px;
+        }
+
+        .search-box button {
+            padding: 5px 10px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <h1>Practice6</h1>
     <fieldset>
         <legend>검색할 항목을 선택하세요</legend>
-                <input type="radio" name="searchList">제목
-                <input type="radio" name="searchList">날짜
-                <input type="radio" name="searchList">작성자
+        <label>
+            <input type="radio" name="searchList" value="title"> 제목
+        </label>
+        <label>
+            <input type="radio" name="searchList" value="date"> 날짜
+        </label>
+        <label>
+            <input type="radio" name="searchList" value="writer"> 작성자
+        </label>
     </fieldset>
+
+    <div id="titleBox" class="search-box">
+        검색할 제목을 입력하세요: <br>
+        <input type="text">
+        <button>검색</button>
+    </div>
+
+    <div id="dateBox" class="search-box">
+        검색할 날짜를 선택하세요: <br>
+        <input type="date">-<input type="date">
+        <button>검색</button>
+    </div>
+
+    <div id="writerBox" class="search-box">
+        검색할 작성자 아이디를 입력하세요: <br>
+        <input type="text">
+        <button>검색</button>
+    </div>
+
+    <script>
+        const radios = document.querySelectorAll('input[name="searchList"]');
+        const boxes = document.querySelectorAll('.search-box');
+
+        radios.forEach(radio => {
+            radio.addEventListener('change', () => {
+                boxes.forEach(box => box.style.display = 'none');
+                const selected = radio.value + "Box";
+                document.getElementById(selected).style.display = 'block';
+            });
+        });
+    </script>
 </body>
 </html>
