--- a/03_FRONT/JavaScript/practice/practice5.html
+++ b/03_FRONT/JavaScript/practice/practice5.html
@@ -28,7 +28,7 @@
         <li>가격 : <input type="number" name="info" placeholder="구매 가격을 입력하세요"></li>
         <li>구매 수량 : <input type="number" name="info" placeholder="최소 10" min="10" max="100"></li>
         <li>납품 등급 : <input type="range" name="info" min="1" max="9" step="2" value="1"></li>
-        <li><textarea name="descript" placeholder="기타 사항"></textarea></li>
+        <li><textarea name="descript"></textarea></li>
       </ul>
     </fieldset>
     <button type="button" onclick="purchase()">입력 값 출력하기</button>
