09/23 todo 사이트 만들기

--- a/03_FRONT/JavaScript/10_jQuery2.html
+++ b/03_FRONT/JavaScript/10_jQuery2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <!-- 외부라이브러 -->
+    <!-- 외부라이브러리 -->
     <script
         src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
@@ -136,12 +136,12 @@
         });
     </script>
 
-    <h3>* fedeIn, fedeOut, fedeToggle</h3>
+    <h3>* fadeIn, fadeOut, fadeToggle</h3>
     <p>선택된 요소가 점점 선명해지면서 보여지고, 점점흐려지면서 사라지게 만드는 메서드</p>
     
-    <button id="fedeIn-btn">보여주기</button>
-    <button id="fedeOut-btn">숨기기</button>
-    <button id="fedeToggle-btn">토글</button>
+    <button id="fadeIn-btn">보여주기</button>
+    <button id="fadeOut-btn">숨기기</button>
+    <button id="fadeToggle-btn">토글</button>
 
     <br><br>
     <img id="fade-img" src="https://d2u3dcdbebyaiu.cloudfront.net/uploads/atch_img/529/f30232ed5191a0790964b64b5ff63d99_res.jpeg" alt="테스트이미지">
